# Operit-armv7a

./: .gitignore  .gitmodules  README(E).md  README.md  Repo_Arch_Basic.md  package-lock.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  plugin_tool_mcp.yml  question.yml
.github/workflows/: android-build.yml  close-title-only-issues.yml  pr-check.yml  pr-required.yml
app/: build.gradle.kts  lint-baseline.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/cmake/: ncnn.cmake  patch-ncnn.cmake
app/src/main/cpp/streamnative/: native_toolpkg_protection.cpp  native_toolpkg_wasm.cpp
app/src/main/java/com/ai/assistance/operit/api/chat/: EnhancedAIService.kt
app/src/main/java/com/ai/assistance/operit/data/api/: GitHubApiService.kt  MarketStatsApiService.kt
app/src/main/java/com/ai/assistance/operit/data/model/: ApiKeyFormatValidator.kt
app/src/main/java/com/ai/assistance/operit/data/preferences/: AgreementPreferences.kt  ModelConfigManager.kt
app/src/main/java/com/ai/assistance/operit/data/repository/: AvatarConfigPersistence.kt  AvatarRepository.kt  ChatHistoryManager.kt
app/src/main/java/com/ai/assistance/operit/data/security/: PluginDenylistRepository.kt
app/src/main/java/com/ai/assistance/operit/services/core/: ApiConfigDelegate.kt  MessageCoordinationDelegate.kt  MessageProcessingDelegate.kt
app/src/main/java/com/ai/assistance/operit/ui/main/: MainActivity.kt  OperitApp.kt
app/src/main/java/com/ai/assistance/operit/util/: ChatMarkupRegex.kt  LatexMathMlConverter.kt  MathMlPlainTextConverter.kt  ToolPkgArtifactMinifier.kt  ToolPkgJsAstMinifier.kt  ToolPkgProtection.kt  ToolPkgWasmRuntime.kt
app/src/main/java/com/ai/assistance/operit/util/markdown/: SmartString.kt
app/src/main/java/com/ai/assistance/operit/util/stream/: TextStreamRevisionTracker.kt
app/src/main/java/com/ai/assistance/operit/widget/: ToolPkgDesktopWidgetDslRenderer.kt
app/src/main/res/values/: strings.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-id/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-ms/: strings.xml
app/src/main/res/values-pt-rBR/: strings.xml
app/src/test/java/com/ai/assistance/operit/util/: ChatMarkupRegexMetaTest.kt  ChatUtilsTest.kt  MathMlPlainTextConverterTest.kt  StreamingJsonXmlConverterFlushTest.kt  StreamingJsonXmlConverterTest.kt
ci/: README.md
ci/script/: check_localizations.py  check_markdown_links.py  check_output.py  check_repo_hygiene.py  download_android_dependencies.sh  normalize_lint_baseline.py  pr_check.py  prepare_android_dependencies.py
ci/test/: test_android_dependencies.py  test_localizations.py  test_markdown_links.py  test_pr_check.py  test_repo_hygiene.py  test_toolpkg_sync.py
cmake/: operit_git_source.cmake
docs/: SCRIPT_DEV_GUIDE.md  SCRIPT_DEV_SKILL.md  TOOLPKG_FORMAT_GUIDE.md
docs/TODO/agreement_version_confirmation/: 1_AgreementVersionGate.md  2_AgreementTextDraft.md  index.md
docs/TODO/api_key_onboarding/: 1_QuickConfiguration.md  2_CustomConfigurationReturn.md  3_StaticReviewAndDelivery.md  index.md
docs/TODO/issue_767_avatar_config_persistence/: index.md
docs/TODO/market_release_author_verification/: 1_RemoveReleaseProof.md  2_DualSourceMarketRegistration.md  index.md
docs/TODO/market_version_download_state/: 1_VersionRangeButtonState.md  index.md
docs/TODO/native_dependency_fetchcontent/: index.md
docs/TODO/pr_check_redesign/: 1_CandidateAndScopes.md  2_AttributionAndChecks.md  3_WorkflowAndBuildLanes.md  index.md
docs/TODO/refactor_building_sys/: 10_DebugInterfaceRegistryAndDataRescueShell.md  13_BuildPipelineContractAndAdapters.md  14_DocumentationAndCleanup.md  2_JsWorkspaceAndLockfile.md  4_GradleInputNormalization.md  6_PixiAndAssetPreparation.md
docs/TODO/toolpkg_assemblyscript_wasm/: index.md
docs/TODO/toolpkg_engine_timeout/: 1_RegistrationIsolationAndInterrupt.md  2_ContextLifecycle.md  3_Verification.md  index.md
docs/TODO/toolpkg_protection_ast_minify/: index.md
docs/TODO/tools_directory_reorganization/: 1_CategoryLayoutAndEntrypoints.md  index.md
docs/doc-src/architecture/: DEFAULT_TOOLS_ARCH.md
docs/doc-src/dev-core/: BUILDING.md  CONTRIBUTING.md
docs/doc-src/feature-protocol/: toolcall_xml_conversion.md
docs/doc-src/package-dev/: toolpkg.md
docs/doc-src/research/: mnn_toolcall_research.md
docs/package_dev/: tool-types.md
examples/: README.md  daily_life.ts  super_admin.ts
examples/github/: build.js
examples/toolpkg_wasm_demo/: .gitignore  README.md  asconfig.json  manifest.json  package-lock.json  package.json  tsconfig.json
examples/toolpkg_wasm_demo/scripts/: pack-toolpkg.mjs
examples/toolpkg_wasm_demo/src/: main.ts
examples/toolpkg_wasm_demo/src/wasm/: assemblyscript-env.d.ts  core.as.ts  core.ts
examples/types/: toolpkg.d.ts
examples/windows_control/resources/pc_agent/operit-pc-agent/: package-lock.json
examples/worldbook/tests/: toolpkg_hook_runner.test.ts
examples/worldbook/tests-dist/: toolpkg_hook_runner.test.js
fbx/: CMakeLists.txt  build.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
llama/: CMakeLists.txt  build.gradle.kts
llama/src/main/cpp/: llama_jni_stub.cpp
mmd/: CMakeLists.txt  build.gradle.kts
mmd/src/main/cpp/android/: MmdInspectorBridge.cpp
mnn/: CMakeLists.txt  build.gradle.kts
quickjs/: README.md  build.gradle.kts
quickjs/src/main/cpp/: CMakeLists.txt  quickjs_jni.cpp
tools/: JS_ADB_README.md  JS_ADB_README_zh.md  sync_example_packages.py
tools/adb/: JS_ADB_README.md  JS_ADB_README_zh.md  execute_js_dir.sh
tools/compose_dsl/: COMPOSE_DSL_DEBUG_README.md  dump_current_compose_dsl_ui.bat
tools/example_packages/: sync_example_packages.py
tools/native_ripgrep/: build_native_ripgrep.ps1
tools/shower/: build_server.bat  run_shower_server.bat  shower_ws_client.py
tools/string/: count_ui_strings.py
tools/toolpkg/: toolpkg_hook_runner.js
web-chat/: package-lock.json  package.json
web-chat/src/ui/features/chat/util/: chatApi.ts
(+55 files in other folders)
